--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<title>北林I/O</title>
 		<meta name="description" content="Innovation in the Open.">
 
-		<link rel="shortcut icon" href="/assets/images/favicon.ico">
-		<link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
+		<link rel="shortcut icon" href="/favicon.ico">
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 		<style>
 			body {
